refactored several controllers
AcademicWorkController.java
ProjectController.java
StudyGroupController.java
WorkTemplateController.java