@@ -7,16 +7,20 @@ import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 import com.github.stepwise.entity.AcademicWork;
 import com.github.stepwise.entity.Project;
 import com.github.stepwise.entity.StudyGroup;
 import com.github.stepwise.entity.User;
 import com.github.stepwise.entity.UserRole;
+import com.github.stepwise.exception.NotFoundException;
 import com.github.stepwise.repository.AcademicWorkRepository;
 import com.github.stepwise.repository.ProjectRepository;
 import com.github.stepwise.repository.StudyGroupRepository;
 import com.github.stepwise.repository.UserRepository;
+import com.github.stepwise.web.dto.GroupResponseDto;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -26,106 +30,105 @@ import lombok.extern.slf4j.Slf4j;
 public class StudyGroupService {
 
     private final StudyGroupRepository studyGroupRepository;
+
     private final UserRepository userRepository;
+
     private final AcademicWorkRepository academicWorkRepository;
+
     private final ProjectRepository projectRepository;
 
-    public List<StudyGroup> findAll(String search) {
-        log.info("Find all groups with search: {}", search);
-
-        if (search == null || search.isBlank()) {
-            return studyGroupRepository.findAll();
-        }
-
-        return studyGroupRepository.findByNameContainingIgnoreCase(search);
+    public List<GroupResponseDto> findAllSummaries(String search) {
+        log.info("Fetching all groups, search={}", search);
+        return StringUtils.hasText(search)
+                ? studyGroupRepository.findSummariesByNameContaining(search)
+                : studyGroupRepository.findAllSummaries();
     }
 
     public StudyGroup findById(Long groupId) {
-        log.info("Find group by id: {}", groupId);
-
+        log.info("Fetching group by id: {}", groupId);
         return studyGroupRepository.findById(groupId)
-                .orElseThrow(() -> new IllegalArgumentException("Group with id " + groupId + " not found"));
+                .orElseThrow(() -> new NotFoundException("Group not found with id: " + groupId));
     }
 
     @Transactional
-    public void create(String name, List<Long> studentsIds) {
-        log.info("Create group with name: {}", name);
+    public void create(String name, List<Long> studentIds) {
+        log.info("Creating group with name: {}", name);
 
-        var usersList = userRepository.findByIdInAndRole(studentsIds, UserRole.STUDENT);
-
-        if (usersList.isEmpty()) {
-            log.warn("No users found with provided IDs: {}", studentsIds);
-            studyGroupRepository.save(new StudyGroup(name, List.of()));
-            return;
+        List<User> students = userRepository.findByIdInAndRole(studentIds, UserRole.STUDENT);
+        if (students.isEmpty()) {
+            log.warn("No users found with provided IDs: {}", studentIds);
         }
 
-        studyGroupRepository.save(new StudyGroup(name, usersList));
-
+        studyGroupRepository.save(new StudyGroup(name, students));
         log.info("Group created with name: {}", name);
     }
 
     @Transactional
-    public StudyGroup update(Long id, List<Long> newStudentsIds) {
-        log.info("Update group with id: {}", id);
+    public StudyGroup update(Long id, List<Long> newStudentIds) {
+        log.info("Updating group with id: {}", id);
 
         StudyGroup studyGroup = studyGroupRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Group with id " + id + " not found"));
+                .orElseThrow(() -> new NotFoundException("Group not found with id: " + id));
 
-        List<User> newUsersList = userRepository.findByIdInAndRole(newStudentsIds, UserRole.STUDENT);
-
+        List<User> newUsersList = userRepository.findByIdInAndRole(newStudentIds, UserRole.STUDENT);
         if (newUsersList.isEmpty()) {
-            log.warn("No users found with provided IDs: {}", newStudentsIds);
+            log.warn("No users found with provided IDs: {}", newStudentIds);
             throw new IllegalArgumentException("No valid students found for the provided IDs");
         }
 
         List<User> oldUsersList = studyGroup.getStudents();
-
         Set<Long> oldUserIds = oldUsersList.stream().map(User::getId).collect(Collectors.toSet());
         Set<Long> newUserIds = newUsersList.stream().map(User::getId).collect(Collectors.toSet());
 
-        List<User> removedUsers = oldUsersList.stream().filter(user -> !newUserIds.contains(user.getId()))
-                .collect(Collectors.toList());
-        List<User> addedUsers = newUsersList.stream().filter(user -> !oldUserIds.contains(user.getId()))
-                .collect(Collectors.toList());
+        List<User> removedUsers = oldUsersList.stream()
+                .filter(user -> !newUserIds.contains(user.getId()))
+                .toList();
+        List<User> addedUsers = newUsersList.stream()
+                .filter(user -> !oldUserIds.contains(user.getId()))
+                .toList();
 
         List<AcademicWork> works = academicWorkRepository.findByGroupId(id);
 
-        if (!removedUsers.isEmpty() && !works.isEmpty()) {
-            List<Long> removedUserIds = removedUsers.stream()
-                    .map(User::getId)
-                    .collect(Collectors.toList());
-
-            List<Project> projectsToRemove = projectRepository.findByAcademicWorkInAndStudentIdIn(works,
-                    removedUserIds);
-
-            if (!projectsToRemove.isEmpty()) {
-                log.info("Removing {} projects for removed students", projectsToRemove.size());
-                projectRepository.deleteAll(projectsToRemove);
-            }
-        }
-
-        if (!addedUsers.isEmpty() && !works.isEmpty()) {
-            List<Project> projectsToAdd = new ArrayList<>();
-
-            for (User student : addedUsers) {
-                for (AcademicWork work : works) {
-                    Project project = new Project("Мой проект по теме: " + work.getWorkTemplate().getWorkTitle(),
-                            "Моё описание проекта", student, work);
-                    projectsToAdd.add(project);
-                }
-            }
-
-            if (!projectsToAdd.isEmpty()) {
-                log.info("Adding {} projects for new students", projectsToAdd.size());
-                projectRepository.saveAll(projectsToAdd);
-            }
-        }
+        removeProjectsForRemovedStudents(removedUsers, works);
+        addProjectsForNewStudents(addedUsers, works);
 
         studyGroup.setStudents(newUsersList);
         StudyGroup updatedStudyGroup = studyGroupRepository.save(studyGroup);
 
         log.info("Group updated with id: {}", id);
-
         return updatedStudyGroup;
     }
+
+    private void removeProjectsForRemovedStudents(List<User> removedUsers, List<AcademicWork> works) {
+        if (removedUsers.isEmpty() || works.isEmpty()) {
+            return;
+        }
+
+        List<Long> removedUserIds = removedUsers.stream().map(User::getId).toList();
+        List<Project> projectsToRemove = projectRepository.findByAcademicWorkInAndStudentIdIn(works, removedUserIds);
+
+        if (!projectsToRemove.isEmpty()) {
+            log.info("Removing {} projects for removed students", projectsToRemove.size());
+            projectRepository.deleteAll(projectsToRemove);
+        }
+    }
+
+    private void addProjectsForNewStudents(List<User> addedUsers, List<AcademicWork> works) {
+        if (addedUsers.isEmpty() || works.isEmpty()) {
+            return;
+        }
+
+        List<Project> projectsToAdd = new ArrayList<>();
+        for (User student : addedUsers) {
+            for (AcademicWork work : works) {
+                projectsToAdd.add(new Project(
+                        "Мой проект по теме: " + work.getWorkTemplate().getWorkTitle(),
+                        "Моё описание проекта", student, work));
+            }
+        }
+
+        log.info("Adding {} projects for new students", projectsToAdd.size());
+        projectRepository.saveAll(projectsToAdd);
+    }
+
 }
